Fix sibling spacing parent reference error; scope prose style to direct children

--- a/src/stylesheets/core/mixins/_usa-typography.scss
+++ b/src/stylesheets/core/mixins/_usa-typography.scss
@@ -1,8 +1,8 @@
 @mixin usa-typography-base-styles {
   p {
-    @include typeset-p;
+    @extend %usa-paragraph;
   }
-
+  
   a {
     @include typeset-link;
   }
